--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,24 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box; }
-body{
+    box-sizing: border-box;
+}
+
+body {
     width: 100%;
     max-height: 100vh;
-    font-family: "roboto", sans-serif ;
+    font-family: "roboto", sans-serif;
 }
-#particles-js{
+
+#particles-js {
     height: 100vh;
     width: 100%;
     background: #000000;
     position: fixed;
     z-index: -1;
 }
-.container-boton{
+
+.container-boton {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +26,8 @@ body{
     height: 100vh;
     width: 100%;
 }
-.boton_tag{
+
+.boton_tag {
     font-size: 45px;
     width: 20rem;
     height: 4.3rem;
@@ -37,19 +42,55 @@ body{
     text-decoration: none;
     text-align: center;
     z-index: 0;
-    
+
 }
-p:hover{
+
+p:hover {
     background-color: #ff0073;
     box-shadow: 0 0 10px #ff0073, 0 0 20px #ff0073, 0 0 20px #ff0073;
 }
-.container-img{
+
+.container {
     display: flex;
+    justify-content: space-evenly;
+    max-width: 100%;
+    margin: 0 auto;
+
 }
-.container-img,.container-img-dos, img{
-    max-width: 30%;
-    max-height: 30%;
+
+.group-btn-uno {
+    display: flex;
+    flex-direction: column;
+}
+
+.group-btn-dos {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.group-btn-uno,
+img {
+    width: 40%;
+    height: 40%;
+    padding: 5px;
+}
+
+.group-btn-uno button,
+.group-btn-dos button {
     border-radius: 40%;
+    border: 0;
     background-color: transparent;
+}
+
+.group-btn-dos,
+img {
+    width: 40%;
+    height: 40%;
+}
+
+#piedra,
+#papel,
+#tijera {
     
 }
